--- a/public/css/complaints.css
+++ b/public/css/complaints.css
@@ -66,6 +66,9 @@ body {
     font-size: 1rem;
     color: #333;
 }
+#responseForm {
+    margin-top: 2rem;
+}
 
 .real-time-info {
     background-color: #fff;
