--- a/public/css/complaints.css
+++ b/public/css/complaints.css
@@ -11,19 +11,22 @@ body {
 }
 
 .complaint-item {
-    background: linear-gradient(145deg, #f4f4f4, #e1e1e1);
+    background-color: #f4f4f4;
     border-radius: 15px;
-    padding: 15px;
+    padding: 1rem;
     margin-bottom: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
+    margin: 2rem auto;
+    width: 90%;
 }
 
 .response-form {
-    background-color: #fff;
-    border-radius: 5px;
+    background-color: #f4f4f4;
+    border-radius: 15px;
     padding: 1rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
     width: 90%;
     max-width: 800px;
     margin: 2rem auto;
@@ -35,7 +38,7 @@ body {
 }
 
 .response-form textarea {
-    width: 100%;
+    width: 99%;
     resize: vertical;
     margin-bottom: 1rem;
 }
