--- a/public/css/fl.css
+++ b/public/css/fl.css
@@ -8,8 +8,9 @@
     
 }
 @media screen and (max-width: 768px) {
-    body{
-        max-width: 75%;
+    .button-div {
+        margin: 1%;
+        max-width: 100px; /* Smaller button container */
     }
     
 }
