--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -36,7 +36,7 @@ body {
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    width: calc(100% - 20px);
+    width: 100%;
     box-sizing: border-box;
   }
   
@@ -86,7 +86,7 @@ body {
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    width: calc(100% - 20px);
+    width: 100%;
   }
   
   p {
