--- a/public/css/navFirst.css
+++ b/public/css/navFirst.css
@@ -23,6 +23,7 @@ a {
     justify-content: flex-end; /* Align links to the right */
     margin: 0;
     padding: 0;
+    margin-top:3% ;
 }
 
 .nav-links li {
