--- a/public/css/chooseLine.css
+++ b/public/css/chooseLine.css
@@ -1,17 +1,18 @@
 label {
-    display: flex; /* Use flexbox */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-  }
+  display: flex; /* Use flexbox */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
 select {
-    width: 100%;
-    height: 200px;
-  }
+  width: 100%;
+  height: 200px;
+}
 button {
-    display: block;
-    margin: 10px auto;
-    
-  }
-legend{
-  padding-left: 45%;
+  display: block;
+  margin: 10px auto;
+}
+legend {
+  display: block; /* Ensure the legend takes up the full width */
+  text-align: center; /* Center the text within the block */
+  margin: 0 auto; /* Center the block itself */
 }
