--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -44,14 +44,14 @@ body {
     padding: 10px;
     font-size: 16px;
     border: none;
-    background-color: #007bff;
+    background-color: #ff0000;
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #b30000;
   }
   
 a{
