--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -44,14 +44,19 @@ body {
     padding: 10px;
     font-size: 16px;
     border: none;
-    background-color: #ff0000;
+    background-color: #007bff;
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
   }
-  
+  .warn{
+    background-color: red;
+  }
+  .warn:hover{
+    background-color: rgb(158, 3, 3);
+  }
   button:hover {
-    background-color: #b30000;
+    background-color: #0056b3;
   }
   
 a{
