--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: black; /* Burlywood color */
+    background-color: black;
     color: white;
     padding: 10px 20px;
     display: flex;
