--- a/public/css/favourite-lines.css
+++ b/public/css/favourite-lines.css
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center;
 }
+.button-div  h5{
+    color: #333;
+}
 
 @media (max-width: 768px) {
     .button-div {
@@ -49,6 +52,6 @@ button img {
 
 button h5 {
     font-size: 20px; /* Increase text size */
-    color: #333;
+    color: white;
     text-align: center;
 }
