--- a/public/css/send-news.css
+++ b/public/css/send-news.css
@@ -59,6 +59,8 @@ button.submit-btn:hover {
 a.back-btn {
   display: inline-block;
   margin-top: 15px;
+  width: 100%;
+  font-size: 18px;
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
