--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -17,6 +17,10 @@ nav {
     justify-content: center;
     text-align: center;
 }
+.nav-title {
+    font-weight: bold;
+    color: white;
+}
 
 .menu, .submenu {
     list-style: none;
