--- a/public/css/navbar-first.css
+++ b/public/css/navbar-first.css
@@ -79,6 +79,13 @@ a {
     font-size: 1.5rem;
     margin: 0; /* Remove margins */
 }
+.logo1 h1{
+    
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+    margin: 0; /* Remove margins */
+}
 
 /* Mobile Styles */
 @media (max-width: 768px) {
